shkuber/dz6_config/task2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: netology
#  annotations:  # ВАЖНО: Эта аннотация нужна для rewrite правил
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service-ip
            port:
              number: 10080
  tls:
    - hosts:
      - myapp.example.com
      secretName: tls-secret
